--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -39,10 +39,16 @@
     </style>
 
     <style name="statline_number">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/White</item>
         <item name="android:textSize">40sp</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
     </style>
 
     <style name="statline_label">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
         <item name="android:layout_marginRight">15dp</item>
         <item name="android:textColor">@color/Black</item>
