--- a/res/menu/edit_game.xml
+++ b/res/menu/edit_game.xml
@@ -1,5 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
+	<item
+        android:id="@+id/game_info"
+        android:title="@string/use_game_upload"
+        android:icon="@drawable/ic_menu_info"
+        android:showAsAction="ifRoom" />
+    
     <item
         android:id="@+id/game_complete"
         android:title="@string/done"
