--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -176,6 +176,12 @@
         <item name="android:textColor">@color/Orange</item>
     </style>
     
+    <style name="left_sline">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+    </style>
+    
     
 
 </resources>
