--- a/res/layout/activity_game_manager.xml
+++ b/res/layout/activity_game_manager.xml
@@ -6,12 +6,6 @@
     android:orientation="vertical"
     tools:context=".GameManager" >
 
-    <TextView
-        android:id="@+id/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
     <ListView
         android:id="@+id/list_gm"
         android:layout_width="match_parent"
@@ -20,23 +14,15 @@
     </ListView>
 
     <FrameLayout
-        android:id="@+id/button_holder"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:background="@color/Orange"
-        android:padding="5dp" >
+        android:id="@+id/save_frame"
+        style="@style/bottom_buttons_bar"
+        android:layout_width="match_parent" >
 
         <Button
-            android:id="@+id/save_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:background="@android:drawable/btn_default"
-            android:drawableLeft="@drawable/ic_menu_done"
+            android:id="@+id/save_scout"
+            style="@style/bottom_buttons"
             android:onClick="saveArchive"
             android:text="@string/save" />
-
     </FrameLayout>
 
 </LinearLayout>
