--- a/res/layout/avg_totals.xml
+++ b/res/layout/avg_totals.xml
@@ -8,19 +8,24 @@
     <LinearLayout
         android:id="@+id/manage_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:padding="7dp" >
 
-        <Button
-            android:id="@+id/to_game_manager"
-            style="?android:attr/buttonStyleSmall"
+        <TextView
+            android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:layout_gravity="bottom"
+            android:text="@string/filter_colon"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/gls_blue" />
 
         <Spinner
             android:id="@+id/spinner_arc"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="10dp" />
 
     </LinearLayout>
 
@@ -30,6 +35,17 @@
         android:layout_height="match_parent"
         android:layout_weight="1" >
 
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/save_frame"
+        style="@style/bottom_buttons_bar"
+        android:layout_width="match_parent" >
+
+        <Button
+            android:id="@+id/to_game_manager"
+            style="@style/bottom_buttons"
+            android:text="@string/archive" />
     </FrameLayout>
 
 </LinearLayout>
