--- a/res/layout/avg_totals_frag.xml
+++ b/res/layout/avg_totals_frag.xml
@@ -11,439 +11,25 @@
         android:layout_height="0dp"
         android:layout_weight="1" >
 
-        <HorizontalScrollView
-            android:id="@+id/avg_totals"
-            style="@style/padded_block"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+        <LinearLayout
+            android:id="@+id/stat_cont"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-            <TableLayout
+            <WebView
+                android:id="@+id/stat_web"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/errText"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <TableRow
-                    android:id="@+id/tableRow1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/textView1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/empty" />
-
-                    <TextView
-                        android:id="@+id/avg"
-                        style="@style/table_header_text"
-                        android:text="@string/avg" />
-
-                    <TextView
-                        android:id="@+id/totals"
-                        style="@style/table_header_text"
-                        android:text="@string/totals" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_games"
-                        style="@style/table_label_text"
-                        android:text="@string/games" />
-
-                    <TextView
-                        android:id="@+id/avg_games"
-                        style="@style/table_item_text"
-                        android:text="@string/empty" />
-
-                    <TextView
-                        android:id="@+id/tot_games"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_minutes"
-                        style="@style/table_label_text"
-                        android:text="@string/minutes" />
-
-                    <TextView
-                        android:id="@+id/avg_minutes"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/tot_minutes"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_points"
-                        style="@style/table_label_text"
-                        android:text="@string/points" />
-
-                    <TextView
-                        android:id="@+id/avg_points"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/tot_points"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_rebounds"
-                        style="@style/table_label_text"
-                        android:text="@string/rebounds" />
-
-                    <TextView
-                        android:id="@+id/avg_rebounds"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/tot_rebounds"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow12"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_reb_off"
-                        style="@style/table_label_text"
-                        android:text="@string/orebounds" />
-
-                    <TextView
-                        android:id="@+id/avg_reb_off"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/tot_reb_off"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_reb_def"
-                        style="@style/table_label_text"
-                        android:text="@string/drebounds" />
-
-                    <TextView
-                        android:id="@+id/avg_reb_def"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/tot_reb_def"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_assists"
-                        style="@style/table_label_text"
-                        android:text="@string/assists" />
-
-                    <TextView
-                        android:id="@+id/avg_assists"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/tot_assists"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_steals"
-                        style="@style/table_label_text"
-                        android:text="@string/steals" />
-
-                    <TextView
-                        android:id="@+id/avg_steals"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/tot_steals"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow7"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_blocks"
-                        style="@style/table_label_text"
-                        android:text="@string/blocks" />
-
-                    <TextView
-                        android:id="@+id/avg_blocks"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/tot_blocks"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_turnovers"
-                        style="@style/table_label_text"
-                        android:text="@string/turnovers" />
-
-                    <TextView
-                        android:id="@+id/avg_turnovers"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/tot_turnovers"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow9"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_fouls"
-                        style="@style/table_label_text"
-                        android:text="@string/fouls" />
-
-                    <TextView
-                        android:id="@+id/avg_fouls"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/tot_fouls"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow14"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_fgm"
-                        style="@style/table_label_text"
-                        android:text="@string/fgm" />
-
-                    <TextView
-                        android:id="@+id/tot_fgm"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/avg_fgm"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow20"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_fga"
-                        style="@style/table_label_text"
-                        android:text="@string/fga" />
-
-                    <TextView
-                        android:id="@+id/tot_fga"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/avg_fga"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_fg2m"
-                        style="@style/table_label_text"
-                        android:text="@string/fg2m" />
-
-                    <TextView
-                        android:id="@+id/tot_fg2m"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/avg_fg2m"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow21"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_fg2a"
-                        style="@style/table_label_text"
-                        android:text="@string/fg2a" />
-
-                    <TextView
-                        android:id="@+id/tot_fg2a"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/avg_fg2a"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow16"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_fg3m"
-                        style="@style/table_label_text"
-                        android:text="@string/fg3m" />
-
-                    <TextView
-                        android:id="@+id/tot_fg3m"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/avg_fg3m"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow30"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_fg3a"
-                        style="@style/table_label_text"
-                        android:text="@string/fg3a" />
-
-                    <TextView
-                        android:id="@+id/tot_fg3a"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/avg_fg3a"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow17"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_ftm"
-                        style="@style/table_label_text"
-                        android:text="@string/ftm" />
-
-                    <TextView
-                        android:id="@+id/tot_ftm"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/avg_ftm"
-                        style="@style/table_item_text"
-                        android:text="@string/zero"
-                        app:ignore="TooManyViews" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow23"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/lab_fta"
-                        style="@style/table_label_text"
-                        android:text="@string/fta" />
-
-                    <TextView
-                        android:id="@+id/tot_fta"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-
-                    <TextView
-                        android:id="@+id/avg_fta"
-                        style="@style/table_item_text"
-                        android:text="@string/zero" />
-                </TableRow>
-            </TableLayout>
-        </HorizontalScrollView>
+                android:layout_height="wrap_content"
+                android:text="@string/empty"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        </LinearLayout>
     </ScrollView>
 
     <include
@@ -495,7 +81,6 @@
                         style="@style/big_stat"
                         android:text="@string/zero"
                         android:textSize="40sp" />
-
                 </TableRow>
 
                 <TableRow
