--- a/res/layout/avg_totals_frag.xml
+++ b/res/layout/avg_totals_frag.xml
@@ -102,7 +102,31 @@
                         android:id="@+id/lab_ftp"
                         style="@style/big_stat_label"
                         android:text="@string/ftp" />
+
                 </TableRow>
+
+                <TableRow
+                    android:id="@+id/TableRow01"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/ss_fgma"
+                        android:layout_gravity="center_horizontal"
+                        android:text="@string/zero" />
+
+                    <TextView
+                        android:id="@+id/ss_fg3ma"
+                        android:layout_gravity="center_horizontal"
+                        android:text="@string/zero" />
+
+                    <TextView
+                        android:id="@+id/ss_ftma"
+                        android:layout_gravity="center_horizontal"
+                        android:text="@string/zero" />
+
+                </TableRow>
+
             </TableLayout>
         </HorizontalScrollView>
     </LinearLayout>
